[package]
name = "stama"
version = "1.0.0"
edition = "2021"
authors = ["Silvano Gordian Rosenau <silvano.rosenau@uni-hamburg.de>"]
description = "A terminal user interface for monitoring and managing slurm jobs."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
crossterm = "0.27.0"
ratatui = { version = "0.26.1", features = ["unstable-rendered-line-info"] }
tui-textarea = "0.4.0"
toml = "0.5.8"
serde = { version = "1.0.197", features = ["derive"] }
clap = "4.5.4"
regex = "1.5.4"
